Fix CTA tab missing from dashboard - update dist files
- Added CTA tab to modular-fixed.html in dist folder
- Copied cta-analysis-view.js to dist/dashboard/components
- Changed emoji from 🎯 to 💀 for CTA tab
- This fixes the issue where CTA tab wasn't showing in NPX deployment

--- a/src/dashboard/modular-fixed.html
+++ b/src/dashboard/modular-fixed.html
@@ -295,7 +295,7 @@
     <button class="tab" onclick="switchTab('files')">File Analysis</button>
     <button class="tab" onclick="switchTab('smart')">🤖 Smart Analysis</button>
     <button class="tab" onclick="switchTab('log')">📊 Log</button>
-    <button class="tab" onclick="switchTab('cta')">🎯 CTAs</button>
+    <button class="tab" onclick="switchTab('cta')">💀 CTAs</button>
   </div>
   
   <!-- Main Container -->
